--- a/config.gradle
+++ b/config.gradle
@@ -1,36 +1,9 @@
-ext.createAllCombined = { list, name, base, type, project ->
+ext.createAllCombined = { list, name, base, type, project, extraclassifier ->
     def outputsFolder = file("$project.buildDir/outputs")
-    def task = project.tasks.create(base + '-all', type) {
-        description = 'Creates component archive for all classifiers'
+    def task = project.tasks.create(base + "-all${extraclassifier}", type) {
+        description = "Creates component archive for all ${extraclassifier} classifiers"
         destinationDir = outputsFolder
-        classifier = 'all'
-        baseName = base
-        duplicatesStrategy = 'exclude'
-
-        list.each {
-            it.outputs.files.each {
-                from project.zipTree(it)
-            }
-            dependsOn it
-        }
-    }
-
-    project.build.dependsOn task
-
-    project.artifacts {
-        task
-    }
-
-    return task
-
-}
-
-ext.createAllCombinedDebug = { list, name, base, type, project ->
-    def outputsFolder = file("$project.buildDir/outputs")
-    def task = project.tasks.create(base + '-alldebug', type) {
-        description = 'Creates component archive for all classifiers'
-        destinationDir = outputsFolder
-        classifier = 'alldebug'
+        classifier = "all${extraclassifier}"
         baseName = base
         duplicatesStrategy = 'exclude'
 
