Include pdb files in static distribution

--- a/publish.gradle
+++ b/publish.gradle
@@ -11,7 +11,7 @@ publishing {
     }
 }
 
-def pubVersion = "${project.ext.version}-17"
+def pubVersion = "${project.ext.version}-18"
 
 def outputsFolder = file("$project.buildDir/outputs")
 
@@ -231,6 +231,7 @@ task cppHeadersZip(type: Zip, dependsOn: make) {
             from(staticBuildDir.resolve("lib").resolve(buildTypeFolder).toFile()) {
                 into project.platformPath + '/static'
                 include 'opencv*.lib'
+                include '*.pdb'
                 exclude 'opencv_*.lib'
             }
         }
