--- a/publish.gradle
+++ b/publish.gradle
@@ -11,7 +11,7 @@ publishing {
     }
 }
 
-def pubVersion = "${project.ext.version}-18"
+def pubVersion = "${project.ext.version}-19"
 
 def outputsFolder = file("$project.buildDir/outputs")
 
@@ -240,7 +240,7 @@ task cppHeadersZip(type: Zip, dependsOn: make) {
         }
     }
 
-    project.tasks.create('jniJar' + buildType, Zip) {
+    project.tasks.create('jniJar' + buildType, Jar) {
         dependsOn tasks.named('make' + buildType)
         destinationDir = outputsFolder
         classifier = outputClassifier
