--- a/config.gradle
+++ b/config.gradle
@@ -8,9 +8,7 @@ ext.createAllCombined = { list, name, base, type, project, extraclassifier ->
         duplicatesStrategy = 'exclude'
 
         list.each {
-            it.outputs.files.each {
-                from project.zipTree(it)
-            }
+            from project.zipTree(it.archivePath)
             dependsOn it
         }
     }
